Fix overflow

--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -24,11 +24,6 @@ $entryTime: 2s
   100%
     opacity: 1
 
-html
-  height: 100%
-  overflow: hidden
-
-
 html, body
   margin: 0
   padding: 0
